# telegram-bet-bot

./: .pylintrc  Makefile  pyproject.toml
.github/workflows/: ci.yaml
